# 2D-Elasticity-FEM

./: .gitignore  README.md
Engine/: Element.cpp  Element.h  Engine.vcxproj  Engine.vcxproj.filters  Enums.h  FileReader.cpp  FileReader.h  Main.cpp  Material.cpp  Material.h  MatrixOperations.h  Model.cpp  Model.h  Solver.cpp  Solver.h  Structs.h  Utils.h
Engine/Input/: INPUT 2x2.txt  INPUT BEAM 40EL.txt  INPUT.txt
Engine/Input/samples/: INPUT 2x2.txt  INPUT 4x4.txt  INPUT BEAM 300EL.txt  INPUT BEAM 40EL CONJGRAD.txt  INPUT BEAM 40EL.txt
Modeler/: export_input.py  main.py  mesh.py  write_compute_file.py
src/: build.ps1  build_engine.ps1  fem_modeler.spec
src/Engine/: CMakeLists.txt  Element.cpp  Element.h  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  Enums.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Main.cpp  Material.cpp  Material.h  Model.cpp  Model.h  OUTPUT.json  Solver.cpp  Structs.h  Utils.h
src/Modeler/: engine_results.py  export_input.py  main.py  mesh.py  run_engine.py
